Fri Feb 27 09:50:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/ace_qt3reactor.mpc:
        * ace/ace_qt4reactor.mpc:
          Preventing QtReactor_moc.cpp to be included twice

Fri Feb 27 08:21:47 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/FlReactor/FlReactor.cpp:
        * ace/FoxReactor/FoxReactor.cpp:
        * tests/FlReactor_Test.cpp:
          Fixed includes.

Fri Feb 27 07:52:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * performance-tests/RPC/client.cpp:
          Added #include "ace/Throughput_Stats.h" to fix compile errors.

Fri Feb 27 07:08:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Corrected sorting order

Thu Feb 26 12:26:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Addr.cpp:
          Layout change

        * ace/Event_Handler.h:
        * ace/Free_List.h:
        * ace/Logging_Strategy.h:
        * ace/Process_Manager.h:
        * ace/Select_Reactor_Base.h:
        * ace/Select_Reactor_T.h:
        * ace/SSL/SSL_SOCK_Acceptor.inl:
        * ace/Timer_Heap_T.h:
        * ace/Timer_Wheel_T.h:
          Doxygen change

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:
        * ace/Service_Gestalt.h:
          Changed the default value of the logger_key argument
          to open to 0. That way we can easier check if the user
          has overridden the default. Also check the logger_key
          in Service_Gestalt, so that it can be set through TAO.
          This fixes bugzilla 3597

Thu Feb 26 10:45:58 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux_common.GNU:
          Fixed TCL/TK flags for Ubuntu.

Thu Feb 26 09:24:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Don't generate the LAST file anymore, it only takes disk space
          and is not used

Thu Feb 26 08:39:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
